[metadata]
name = rw-tosca-parser
url = https://github.com/RIFTIO/rw-tosca-parser
summary = RIFTio customized parser for TOSCA Simple Profile in YAML.
description-file =
    README.rst
author = RIFT.io
author-email = philip.joseph@riftio.com
home-page = http://open.riftio.com
license = Apache License, Version 2.0
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    toscaparser

[entry_points]
console_scripts =
    tosca-parser = toscaparser.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = toscaparser/locale
domain = toscaparser

[update_catalog]
domain = toscaparser
output_dir = toscaparser/locale
input_file = toscaparser/locale/toscaparser.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = toscaparser/locale/toscaparser.pot
